# mini-term

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.test.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-27-mini-term.md  2026-04-01-git-history-panel.md  2026-04-01-nested-groups.md  2026-04-10-ai-completion-notification.md  2026-04-13-ai-provider-status-system.md  2026-04-13-project-last-conversation-sorting.md  2026-04-14-ai-image-paste-priority-followup.md  2026-04-14-macos-clipboard-image-followup.md  2026-04-14-macos-terminal-clipboard-followup.md  2026-04-14-provider-specific-image-paste-routing.md  2026-04-14-unified-platform-image-paste-routing.md  2026-04-14-upstream-v0.2.13-image-paste-migration.md  2026-04-15-ai-clipboard-detailed-v7.md  2026-04-15-ai-clipboard-screenshot-vs-explorer.md  2026-04-15-ai-pane-native-paste-recovery.md  2026-04-15-ai-pane-paste-followup-v2.md  2026-04-15-ai-pane-paste-followup-v6.md  2026-04-15-ai-text-bracketed-paste-image-native.md  2026-04-15-macos-right-click-paste-alignment-plan.md  2026-04-15-right-click-copy-paste-fix.md  2026-04-20-ai-provider-status-dot-fix.md  2026-04-21-ai-session-detection-not-only-command-echo.md  2026-04-21-explorer-image-files-split.md  2026-04-21-macos-render-paste-debug.md  2026-04-21-provider-third-window-debug.md  2026-04-27-file-search.md  2026-05-14-macos-hook-packaging-fix.md
docs/superpowers/specs/: 2026-03-29-terminal-layout-persistence-design.md  2026-04-01-git-history-panel-design.md  2026-04-10-ai-completion-notification-design.md  2026-04-27-file-search-design.md
src/: App.tsx  main.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: prepare-sidecar.mjs
src-tauri/src/: ai_sessions.rs  clipboard.rs  config.rs  editor.rs  fs.rs  git.rs  hook_registry.rs  hook_server.rs  lib.rs  path_access.rs  perf_log.rs  process_monitor.rs  pty.rs  search.rs
src/components/: CommitDiffModal.tsx  DiffModal.tsx  DoneTag.tsx  FileTree.tsx  FileViewerModal.tsx  GitHistory.tsx  PaneGroup.tsx  ProjectList.tsx  SearchModal.tsx  SessionList.tsx  SettingsModal.tsx  SplitLayout.tsx  StatusDot.tsx  TabBar.tsx  TerminalArea.tsx  TerminalInstance.tsx  ToastContainer.tsx
src/hooks/: useTauriEvent.ts
src/utils/: contextMenu.ts  dragState.ts  projectTree.ts  prompt.ts  ptyWriteQueue.ts  terminalCache.ts  themeManager.ts  timeFormat.ts
tests/: ptyWriteQueue.test.cjs  themeManager.compat.test.cjs
