[package]
name = "tauri-app"
version = "0.2.38"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
portable-pty = "0.8"
notify = "7"
ignore = "0.4"
tauri-plugin-clipboard-manager = "2.3.2"
image = "0.25"
tauri-plugin-window-state = "2"
dirs = "6"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
pathdiff = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_Graphics_Gdi",
] }
# Layer 3 需要读 node.exe 这类启动器的命令行来识别 gemini / node 版 codex / claude-code 等
# npm 包型 AI CLI（进程名是 node.exe，无法靠 szExeFile 匹配）。sysinfo 封装了 NtQueryInformationProcess
# + PEB ReadProcessMemory 读 CommandLine 的所有细节，省去手写非公开 API。
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
